# basicreviewer

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  dev.md  pyproject.toml
src/crev/: __init__.py
src/crev/exim/: __init__.py  export_cmd.py  import_cmd.py
src/crev/extract/: __init__.py  extract_pr.py  util.py
src/crev/init/: __init__.py
src/crev/init/assets/: .env.template  configs_template.json  init_success.txt  repos_template.json
src/crev/init/template/: configs.json  readme.md
src/crev/init/template/prompts/: review.txt  sum.pr.txt  sum.repo.txt  sum_repo_app.txt  sum_repo_file_category.txt  sum_repo_infra.txt  sum_repo_structure.txt  sum_repo_test.txt  summary.txt
src/crev/mcp_serv/: __init__.py  organizational.py  server.py  summary.py  utils.py
src/crev/pull/: __init__.py
src/crev/sum/: __init__.py  sum_pr.py  sum_repo.py  util.py
src/crev/utils/: __init__.py  cache.py
src/crev/utils/ai/: __init__.py  llm.py  models.py
src/crev/utils/context/: __init__.py
src/crev/utils/context/collector/: __init__.py  file_category.py  pr.py  readme.md  repo.py
tests/exim/: test.configs.json  test_export.py  test_import.py
tests/extract/: test_extract_base.py
tests/init/: test_base.py  test_init_base.py
tests/mcp_serv/: test_endpoints.py  test_mcp_serv_base.py
tests/pull/: test.configs.json  test_pull_base.py  test_pull_edge.py  test_pull_error.py
tests/sum/: test.configs.json  test_sum_base.py  test_sum_pr.py  test_sum_repo.py
