[project]
name = "crev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "basic bear", email = "basic.bear@outlook.com" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
crev = "crev:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
